<resources>
    <string name="app_name">PocketCharacters</string>
    <string name="title_activity_character_list">List of Characters</string>
    <string name="title_activity_game_mode_list">List of GameModes</string>
    <string name="character_List">Character List</string>
    <string name="gameMode_List">GameMode List</string>
    <string name="tutorial">Tutorial</string>
    <string name="synchronize_with_server">synchronize with server</string>
    <string name="mod">MOD</string>
    <string name="form_type">Type: </string>
    <string name="form_name">Name: </string>
    <string name="form_quantity">Quantity: </string>
    <string name="object_description">Object description...</string>
    <string name="stat_List">Stat List</string>
    <string name="type_Object_List">Type Object List</string>
    <string name="form_phase">Phase: </string>
    <string name="form_character_name">Character Name: </string>
    <string name="character_Stats">"Character's Stats"</string>
    <string name="inventory">Inventory</string>
    <string name="send_Character">Send Character</string>
    <string name="no_exist_gamemode">No exist a GameMode!</string>
    <string name="set_game_mode_name_hint">Set GameMode name</string>
    <string name="dialog_title">New GameMode</string>
    <string name="dialog_message">Set the name of the GameMode</string>
    <string name="dialog_positive_button">Create</string>
    <string name="dialog_negative_button">Cancel</string>
    <string name="dialog_toast1">The name is empty!</string>
    <string name="dialog_toast2">Already exist a GameMode with this name!</string>
    <string name="dialog_toast3">GameMode saved</string>
    <string name="stat_saved">Stat saved!</string>
    <string name="object_list">Object List</string>
    <string name="title_activity_object_list">List of Objects</string>
    <string name="object_type_list">Object Type List</string>
    <string name="no_exist_object_type">No exist object type yet!</string>
    <string name="create">create</string>
    <string name="navigate_title">Type List</string>
    <string name="navigate_neutral_button_title">Delete</string>
    <string name="title_activity_object_type_list">List of Type Objects</string>
    <string name="object_name_empty">The object name is empty!</string>
    <string name="object_description_empty">The object description is empty!</string>
    <string name="already_exist_object">Already exist this object name in the GameMode!</string>
    <string name="title_activity_stat_list">List of Stats</string>
    <string name="form_chapter">Chapter: </string>
    <string name="title_activity_character_stats_list">List of Stats</string>
    <string name="title_activity_character_object_list">List of Objects</string>
    <string name="already_exist_character_name">Already exist a character with this name!</string>
    <string name="already_exist_character_object">Already the character have this Object!</string>
    <string name="character_saved">Character saved!</string>
    <string name="type_saved">Type saved!</string>
    <string name="character_required_values">The character name and the chapter are required!</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="question_delete_character">Do you really want delete this Character?</string>
    <string name="question_delete_object">Do you really want delete this Object?</string>
    <string name="question_delete_stat">Do you really want delete this Stat?</string>
    <string name="question_delete_game_mode">Do you really want delete this GameMode?</string>
    <string name="question_delete_type">Do you really want delete this Type?</string>
    <string name="yes">yes</string>
    <string name="no">No</string>
    <string name="character_deleted">Character deleted!</string>
    <string name="object_deleted">Object deleted!</string>
    <string name="stat_deleted">Stat deleted!</string>
    <string name="game_mode_deleted">GameMode deleted!</string>
    <string name="type_deleted">Type deleted!</string>
    <string name="already_exist_name_character">Already exist a character with that name in this GameMode!</string>
    <string name="already_exist_stat_game_mode">Already exist a stat in the GameMode with this name!</string>
    <string name="already_exist_stat_character">Already the character have this Stat!</string>
    <string name="already_exist_type_name">Already exist a type with this name!</string>
    <string name="quantity_greater_than_0">The quantity must be greater than 0!</string>
    <string name="name_stat_empty">The name of the stat is empty!</string>
    <string name="value_empty">The value is empty!</string>
    <string name="type_name_empty">The type name is empty!</string>
    <string name="new_type">New type</string>
    <string name="create_a_new_type">Create a new Type</string>
    <string name="stat_name">Stat name</string>
    <string name="new_stat">New Stat</string>
    <string name="create_a_new_stat">Create a new Stat</string>
    <string name="all_stats_are_assigned">There are no more unassigned stats!</string>
    <string name="no_objects_in_game_mode">There are no objects in the gamemode yet!</string>
    <string name="update">Update</string>
    <string name="form_value">Value: </string>
    <string name="form_stat">Stat: </string>
    <string name="value">Value</string>
    <string name="stats">Stats</string>
    <string name="objects">Objects</string>
    <string name="type">Type</string>
    <string name="quantity">Quantity</string>
    <string name="characters">Characters</string>
    <string name="game_mode">GameMode</string>
    <string name="chapter">Chapter</string>
    <string name="character_dependency"></string>
    <string name="you_cant_delete_this_game_mode">"You can't delete this GameMode! Before you must remove all its elements!"</string>
    <string name="you_cant_delete_this_object_type">"You can't delete this object type! Before you must remove all objects with this type!"</string>
    <string name="character_description">Character description...</string>
    <string name="see_description">See description</string>
    <string name="save_description">Save Description</string>
    <string name="description_required">The description is required!</string>
    <string name="description_saved">Description saved!</string>
    <string name="stat_asigned">The stat is already asigned to a person! You must delete all the references first!</string>
    <string name="object_equiped">The object is already equiped to a person! You must delete all the references first!</string>
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="tab_text_1">Intro</string>
    <string name="tab_text_2">GameModes</string>
    <string name="tab_text_3">Objects And Stats</string>
    <string name="tab_text_4">Character</string>
    <string name="intro_tutorial">PocketCharacter is an app that will allow you to store Role characters for different existing game systems (DAD, Pathfinder, Masquerade ...) or your own.</string>
    <string name="game_modes_tutorial">The game mode refers to the game system which is going to be used to store a character.
    \nThe game mode is necessary to create both characters, objects and statistics.</string>
    <string name="objects_and_stats">The statistics are the attributes that a character will have in a game mode. \nYou only need to create
    the statistics for a game mode once, then you just have to select them at the time of editing the character</string>
    <string name="character_tutorial">The character is essential to be able to play most of the current role-playing systems. \nTherefore
    The existence of this application. \nThe characters must have a unique name in the App (If you are the type of player who always uses the
        same name to give life to your characters, you just have to add at the end of each name a suffix of the game mode that is going to be played for example).</string>
</resources>
