<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E6FA">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/form_type"
            android:textSize="16sp"
            android:layout_margin="5sp"></TextView>

        <TextView
            android:id="@+id/TextViewObjectType"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:minWidth="250sp"
            android:background="#FFF"
            android:textSize="16sp"
            android:layout_margin="5sp"></TextView>

        <Button
            android:id="@+id/btnModObjectDatas"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/mod"></Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/form_name"
            android:textSize="16sp"
            android:layout_margin="5sp"></TextView>

        <TextView
            android:id="@+id/TextViewObjectName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:background="#FFF"
            android:minWidth="250sp"
            android:layout_margin="5sp"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/form_quantity"
            android:textSize="16sp"
            android:layout_margin="5sp"></TextView>

        <TextView
            android:id="@+id/TextViewObjectQuantity"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#FFF"
            android:textSize="16sp"
            android:minWidth="232sp"
            android:layout_margin="5sp"></TextView>
    </LinearLayout>

    <EditText
        android:id="@+id/EditTextObjectDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:layout_margin="5sp"
        android:minHeight="250sp"
        android:background="#FFF"
        android:hint="@string/object_description"
        android:inputType="textMultiLine" />

</LinearLayout>