<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activities.CharacterListActivity"
    tools:showIn="@layout/activity_character_list">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTabList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:text="@string/characters"
            android:textSize="18sp"
            android:layout_marginStart="5sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:text="@string/game_mode"
            android:textSize="18sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:text="@string/chapter"
            android:textSize="18sp"
            android:textStyle="bold"></TextView>
    </LinearLayout>

    <ListView
        android:id="@+id/ListViewCharacters"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="5sp"
        app:layout_constraintTop_toTopOf="parent"></ListView>
</androidx.constraintlayout.widget.ConstraintLayout>