<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_primary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/form_character_name"
            android:textSize="16sp"
            android:layout_margin="5sp"></TextView>

        <EditText
            android:id="@+id/EditTextCharacterNameCreate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:minWidth="250sp"
            android:background="#FFF"
            android:textSize="14sp"
            android:layout_margin="5sp"></EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/form_chapter"
            android:textSize="16sp"
            android:layout_margin="5sp"></TextView>

        <EditText
            android:id="@+id/EditTextChapterCreate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:background="#FFF"
            android:minWidth="310sp"
            android:layout_margin="5sp"></EditText>
    </LinearLayout>

    <EditText
        android:id="@+id/EditTextStoryCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:layout_margin="5sp"
        android:minHeight="250sp"
        android:background="#FFF"
        android:hint="@string/object_description"
        android:inputType="textMultiLine" />

    <Spinner
        android:id="@+id/SpinnerGameModes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ></Spinner>

    <Button
        android:id="@+id/btnCreateCharacter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="saveCharacter"
        android:text="Create Character"></Button>

</LinearLayout>