<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activities.CharacterObjectListActivity"
    tools:showIn="@layout/activity_character_object_list">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:text="@string/objects"
            android:textSize="18sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:text="@string/type"
            android:textSize="18sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:text="@string/quantity"
            android:textSize="18sp"
            android:textStyle="bold"></TextView>
    </LinearLayout>

    <ListView
        android:id="@+id/ListViewObjectsCharacter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="380dp"
        android:clickable="true"
        android:minHeight="600sp"
        app:layout_constraintBottom_toTopOf="@+id/FrameLayout01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ListView>

    <FrameLayout
        android:id="@+id/FrameLayout02"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="380dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>